Implememt get info by invitation code
